fix more color contrast issues

--- a/projects/cps-ui-kit/styles/_colors.scss
+++ b/projects/cps-ui-kit/styles/_colors.scss
@@ -259,6 +259,8 @@
   --cps-color-bg-light: #f9f8f8;
   --cps-color-bg-mid: #f4f3f3;
   --cps-color-bg-dark: #eeeded;
+  --cps-color-bg-disabled: #f7f7f7;
+  --cps-color-bg-disabled-selected: #d7d5d5;
 
   //Lines
   --cps-color-line-light: #e3e2e2;
@@ -270,7 +272,7 @@
   --cps-color-text-lightest: #b5b2b2;
   --cps-color-text-light: #9a9595;
   --cps-color-text-mild: #6a6565;
-  --cps-color-text-medium: #5e5858;
-  --cps-color-text-dark: #524a4a;
+  --cps-color-text-medium: #5a5555;
+  --cps-color-text-dark: #4a4444;
   --cps-color-text-darkest: #2d2323;
 }
